--- a/project/frontend/src/components/LandingPage/landingpage.css
+++ b/project/frontend/src/components/LandingPage/landingpage.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif
+}
+
 .main-title,
 .main-para {
     color: #f1f1f1
@@ -7,7 +14,8 @@
     padding-top: 10rem;
     font-size: 5rem;
     font-family: 'Fascinate', cursive;
-    text-transform: uppercase
+    text-transform: uppercase;
+
 }
 
 .main-para {
@@ -15,6 +23,21 @@
     text-Transform: capitalize
 }
 
+.primary-button {
+    margin-top: 5rem;
+    margin-right: 1rem;
+    /* margin-bottom: 5rem; */
+    padding: .6rem;
+    width: 10rem;
+    background: #222;
+    border: none;
+    color: #fff;
+    font-size: 1.2rem;
+    transition: all .5s;
+    cursor: pointer;
+    text-transform: capitalize;
+
+}
 /* #reg_btn span {
     display: inline-block;
     position: relative;
